--- a/proyek.html
+++ b/proyek.html
@@ -79,7 +79,7 @@
         <div class="container mx-auto px-4 py-4 flex justify-between items-center">
             <h1 class="text-2xl font-bold text-green-600">SafeKota</h1>
             <nav class="space-x-4">
-                <a href="safekota.html" class="menu-link">Home</a>
+                <a href="index.html" class="menu-link">Home</a>
                 <a href="lapor.html" class="menu-link">Lapor</a>
                 <a href="proyek.html" class="menu-link">Camera</a>
                 <a href="aboutme.html" class="menu-link">About</a>
